[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
day01 = { path = "../day01" }
day02 = { path = "../day02" }
day03 = { path = "../day03" }
day04 = { path = "../day04" }
day05 = { path = "../day05" }
day06 = { path = "../day06" }
day07 = { path = "../day07" }
day08 = { path = "../day08" }
day09 = { path = "../day09" }
day10 = { path = "../day10" }
day11 = { path = "../day11" }
day12 = { path = "../day12" }
